DDF-UI-178 fix arrangement and spacing

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/attributes-rearrange/dropdown.attributes-rearrange.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/attributes-rearrange/dropdown.attributes-rearrange.less
@@ -2,4 +2,5 @@
   cursor: pointer;
   display: inline-block;
   position: relative;
+  margin-left: 10px;
 }
