--- a/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/remove-attribute/dropdown.remove-attribute.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/remove-attribute/dropdown.remove-attribute.less
@@ -11,5 +11,6 @@
   cursor: pointer;
   display: inline-block;
   position: relative;
+  margin-left: 10px;
 }
 
